package org.example;

public interface IArticulo {
    public Double calcularPrecio();
}
